--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
 release.properties
+.flattened-pom.xml
 
 # Eclipse
 .project
@@ -37,4 +38,3 @@ nb-configuration.xml
 
 # Local environment
 .env
-*dummy*
