feat(section 6): ajoute des profils pour la configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 books.genre=IT
+
+quarkus.banner.enabled=true
+quarkus.log.category."org.agoncal".level=ERROR
+
+%dev.quarkus.banner.path=banner_dev.txt
+%dev.quarkus.log.category."org.agoncal".level=DEBUG
+
+%test.quarkus.banner.path=banner_test.txt
+%test.quarkus.log.category."org.agoncal".level=DEBUG
+
+%custom.quarkus.banner.path=banner_custom.txt
